k8s/apps/ducknet/znc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
  name: znc-ingress
spec:
  rules:
  - host: znc.duck.moe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: znc-clusterip
            port:
              name: http
  tls:
  - hosts:
    - znc.duck.moe
    secretName: znc-cert
